[package]
name = "analyzed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command line interface for the analyzed rust-analyzer daemon"

[dependencies]
analyzed-daemon.workspace = true
analyzed-ipc.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
