[package]
name = "analyzed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command line interface for the analyzed rust-analyzer daemon"

[dependencies]
analyzed-daemon.workspace = true
analyzed-ipc.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
ra_ap_rust-analyzer.workspace = true
project_model = { version = "=0.0.340", package = "ra_ap_project_model" }

[features]
mimalloc = ["ra_ap_rust-analyzer/mimalloc"]
jemalloc = ["ra_ap_rust-analyzer/jemalloc"]
